fix: overlay z-index updated

--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ p[data-width="wide"] {
         position: fixed;
         inset: 0;
         background-image: linear-gradient(rgb(0 0 0 / 0), rgb(0 0 0 / 0.8));
+        z-index: 50;
     }
 
     .nav-list {
